[package]
name = "pingr"
version = "0.2.0"
edition = "2021"
authors = ["Chris Neuwirth <CNeuwirth@networksgroup.com>"]
description = "A blazing fast network scanner with beautiful terminal output and multiple export formats"
readme = "README.md"
repository = "https://github.com/cybrly/pingr"
license = "MIT"
keywords = ["network", "ping", "scanner", "icmp", "subnet"]
categories = ["command-line-utilities", "network-programming"]
homepage = "https://github.com/cybrly/pingr"
documentation = "https://docs.rs/pingr"
exclude = [
    "*.txt",
    "*.json",
    "*.csv",
    "*.gnmap",
    "tests/*",
    ".github/*",
]

[dependencies]
tokio = { version = "1.41", features = ["full", "signal"] }
surge-ping = "0.8"
ipnet = "2.9"
indicatif = "0.17"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
serde_json = "1.0"
dns-lookup = "2.0"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "pingr"
path = "src/main.rs"
